force-app/main/default/objects/UnifiedDictionary__mdt/UnifiedDictionary__mdt.object-meta.xml
<CustomObject>
    <label>UnifiedDictionary</label>
    <pluralLabel>UnifiedDictionary</pluralLabel>
</CustomObject>