force-app/main/default/objects/UnifiedDictionary__mdt/fields/AddParamKey__c.field-meta.xml
<CustomField>
    <fullName>AddParamKey__c</fullName>
    <label>AddParamKey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AXIAL_LOAD</fullName>
                <default>true</default>
                <label>AXIAL_LOAD</label>
            </value>
            <value>
                <fullName>WS_COMP_TYPE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>