force-app/main/default/objects/UnifiedDictionary__mdt/fields/AddParamType__c.field-meta.xml
<CustomField>
    <fullName>AddParamType__c</fullName>
    <label>AddParamType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TEXT</fullName>
                <default>true</default>
                <label>TEXT</label>
            </value>
            <value>
                <fullName>NUMBER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>