force-app/main/default/objects/UnifiedDictionary__mdt/fields/DictID__c.field-meta.xml
<CustomField>
    <fullName>DictID__c</fullName>
    <label>DictID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASSEMBLY</fullName>
                <default>true</default>
                <label>ASSEMBLY</label>
            </value>
            <value>
                <fullName>AXLELOAD</fullName>
            </value>
            <value>
                <fullName>COATTYPE</fullName>
            </value>
            <value>
                <fullName>COVER</fullName>
            </value>
            <value>
                <fullName>IMBAL</fullName>
            </value>
            <value>
                <fullName>INSPECT</fullName>
            </value>
            <value>
                <fullName>MARKTYPE</fullName>
            </value>
            <value>
                <fullName>PACKTYPE</fullName>
            </value>
            <value>
                <fullName>PARTPROD</fullName>
            </value>
            <value>
                <fullName>PRODTYPE</fullName>
            </value>
            <value>
                <fullName>PURPOSE</fullName>
            </value>
            <value>
                <fullName>SHAPE</fullName>
            </value>
            <value>
                <fullName>WSCOMP</fullName>
            </value>
            <value>
                <fullName>COATING</fullName>
            </value>
            <value>
                <fullName>COATINGTYPE</fullName>
            </value>
            <value>
                <fullName>IMBALANCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>