force-app/main/default/objects/UnifiedDictionary__mdt/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WHEELS</fullName>
                <default>true</default>
                <label>WHEELS</label>
            </value>
            <value>
                <fullName>PIPES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>