force-app/main/default/objects/UnifiedDictionary__mdt/fields/ERPCode__c.field-meta.xml
<CustomField>
    <fullName>ERPCode__c</fullName>
    <label>ERP Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>