force-app/main/default/objects/UnifiedDictionary__mdt/fields/ValueNumber__c.field-meta.xml
<CustomField>
    <fullName>ValueNumber__c</fullName>
    <label>ValueNumber</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>