force-app/main/default/objects/UnifiedDictionary__mdt/fields/ValueText__c.field-meta.xml
<CustomField>
    <fullName>ValueText__c</fullName>
    <label>ValueText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>